--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
         <li><a href="//privacy.kakaocorp.com">Privacy</a></li>
     </ul>-->
     <p id="copyright">
-        <a>Copyright &copy; Wookje Kwon.</a>
+        <a>Copyright &copy; Kundol.</a>
         All rights reserved.
     </p>
 </div><!--#footer-->
