--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,10 @@
     <button id="search-toggle" type="button">
         <span class="sr-only">Toggle Search Form</span>
     </button>
-    <a id="logo" href="/">
+    <!-- <a id="logo" href="/">
         <span class="sr-only">큰돌의 터전</span>
-    </a>
+    </a> -->
+    <a>큰돌의 터전</a>
     <div id="search">
         <input id="search-input" type="search" placeholder="글 찾기" value="" />
     </div>
