--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,16 +2,7 @@
 layout: default
 ---
 <div id="cover" class="container-fluid"
-     {% if site.image %}style="background-image:url({{ site.image }});"{% endif %}>
-    {% if paginator.page == 1 %}
-        <!--[if (gt IE 9)|!(IE)]><!-->
-        <video loop muted preload="metadata" crossorigin="anonymous">
-            <source src="{{ site.asset_url }}/images/blog_cover.webm" type="video/webm"/>
-            <source src="{{ site.asset_url }}/images/blog_cover.ogv" type="video/ogg"/>
-            <source src="{{ site.asset_url }}/images/blog_cover.mp4" type="video/mp4"/>
-        </video>
-        <!--<![endif]-->
-    {% endif %}
+     {% if site.image %}style="background-image:url({{ site.image }});"{% endif %}> 
     <div>
         <h1>{{ site.title }}</h1>
         <p>{{ site.description | newline_to_br }}</p>
@@ -19,7 +10,7 @@ layout: default
 </div>
 
 <div id="navbar" class="container">
-    <h5>Featured Posts</h5>
+    <h5>최근 포스팅</h5>
 </div>
 
 <div id="content" class="container">
