--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
     <div id="post-footer">
         {% assign author = site.authors | where: 'name', page.author | first %}
         <a id="post-author" href="{{ author.url }}">
-            <div id="author-image" style="background-image:url({{ author.image | default: '' }});">
+            <div id="author-image" style="background-image:url({{ author.image }})">
                 <span class="sr-only">{{ author.name }}'s profile image</span>
             </div>
             <p id="author-name">{{ author.name }}</p>
@@ -38,32 +38,7 @@ layout: default
         <a id="post-more" href="{{ author.url }}">
             <span>Read more posts by this author</span>
         </a>
-    </div>
-
-
-<!--
-    {% if page.comments %}
-        <div id="disqus_thread" style="margin: 0 40px"></div>
-        <script>
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-        /*
-        var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = '//wookje.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    {% endif %}
--->
+    </div> 
 
 </div>
 
