--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,8 +56,8 @@
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon" type="image/png"/>
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon-precomposed" type="image/png"/>
 <link href="{{ site.asset_url }}/lib/normalize.css" rel="stylesheet" type="text/css"/>
-<link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/> 
-<!-- <link href="{{ site.asset_url }}/css/vue.css" rel="stylesheet" type="text/css"/>  -->
+<link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/>  
 <link href="{{ site.asset_url }}/lib/magnific-popup.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
 <link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/> 
 <link href="{{ site.asset_url }}/css/screen.css" rel="stylesheet" type="text/css"/>
