--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
 
 {% include footer.html %}
 
-<script src="{{ site.asset_url }}/lib/jquery-1.12.0.min.js"></script>
+<!-- <script src="{{ site.asset_url }}/lib/jquery-1.12.0.min.js"></script>
 <script src="{{ site.asset_url }}/lib/jquery.magnific-popup.min.js"></script>
 <script src="{{ site.asset_url }}/js/index.js"></script>
-<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
 
 {% if site.google_analytics %}
 {% include google_analytics.html %}
