--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     {% include head.html %}
-    {% seo %}
+    <!-- {% seo %} -->
 </head>
 <body class="{{ page.layout | append: '-template' }}">
 
@@ -22,7 +22,7 @@
 <script src="{{ site.asset_url }}/lib/jquery.magnific-popup.min.js"></script>
 <script src="{{ site.asset_url }}/js/index.js"></script>
 <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
-
+<!-- 
 {% if site.google_analytics %}
 {% include google_analytics.html %}
 {% endif %}
@@ -42,6 +42,6 @@
     {% if site.google_plus %}
     {% include google_plus_sdk.html %}
     {% endif %}
-{% endif %}
+{% endif %} -->
 </body>
 </html>
