--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -35,6 +35,10 @@ kbd {
 b, strong, optgroup {
     font-weight: 580;
 }
+strong{
+    background-color: #fff8e5;
+    padding: 1px 5px;
+}
 
 a, a:link, a:visited, a:active, a:hover {
     color: #505050;
@@ -129,6 +133,8 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 p > .highlighter-rouge {
     border-radius: 2px;
     color: #e96900;
+    position: relative;
+    bottom: 1px;
     font-size: .8rem;
     margin: 0 2px;
     padding: 3px 5px;
@@ -955,7 +961,7 @@ body.tag-template #navbar {
 
 #post-content a {
     text-decoration: none;
-    border-bottom: 1px solid #f3cf00;
+    border-bottom: 2px solid #f3cf00;
 }
 
 #post-content > *:first-child {
