--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <!-- <a id="logo" href="/">
         <span class="sr-only">큰돌의 터전</span>
     </a> -->
-    <a>뭐지..? 큰돌의 터전</a>
+    <a>큰돌의 터전</a>
     <div id="search">
         <input id="search-input" type="search" placeholder="글 찾기" value="" />
     </div>
