--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family:'Kakao', sans-serif;
     font-weight: 300; /* @@iolo 200 -> 300, 200 for retina only! */
     color: #505050;
     background-color: #fff;
