흠냐리흠냐냐

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,10 @@
 </div>
 
 {% include footer.html %} 
+<script src="{{ site.asset_url }}/lib/jquery-1.12.0.min.js"></script>
+<script src="{{ site.asset_url }}/lib/jquery.magnific-popup.min.js"></script>
+<script src="{{ site.asset_url }}/js/index.js"></script>
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+
 </body>
 </html>
