--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,15 @@
 <script src="{{ site.asset_url }}/lib/jquery.magnific-popup.min.js"></script>
 <script src="{{ site.asset_url }}/js/index.js"></script>
 <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139970023-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139970023-1');
+</script>
 
 </body>
 </html>
