포스팅 SEO부분 수정

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
 {% assign meta_image = meta_image | prepend: site.url %}
 {% endunless %}
 <title>{{ meta_title }}</title>
+<meta name="google-site-verification" content="cW070xd-tZ32L22Er8O3X_NWWFCOuubL1VlPZDG6yXU" />
 <meta name="title" content="{{ meta_title }}" />
 <meta name="author" content="{{ meta_author }}"/>
 <meta name="description" content="{{ meta_description }}"/>
