--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ layout: default
              {% if prev.image %}style="background-image: url({{ prev.image }});"{% endif %}>
             <div>
                 <h3><a href="{{ prev.url }}">{{ prev.title }}</a></h3>
-                <p>YOU MIGHT ENJOY</p>
+                <p>이전 포스팅</p>
             </div>
         </div>
     {% endif %}
@@ -59,7 +59,7 @@ layout: default
              {% if next.image %}style="background-image: url({{ next.image }});"{% endif %}>
             <div>
                 <h3><a href="{{ next.url }}">{{ next.title }}</a></h3>
-                <p>NEXT POST</p>
+                <p>다음 포스팅</p>
             </div>
         </div>
     {% endif %}
