페이지 속도 증가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,5 +60,5 @@
 <link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/>   
 <!-- <link href="{{ site.asset_url }}/lib/magnific-popup.min.css" rel="stylesheet" type="text/css"/> --> 
 <link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/> 
-<link href="{{ site.asset_url }}/fonts/d2coding.css" rel="stylesheet" type="text/css"/>  
+<!-- <link href="{{ site.asset_url }}/fonts/d2coding.css" rel="stylesheet" type="text/css"/>   -->
 <link href="{{ site.asset_url }}/css/screen.css" rel="stylesheet" type="text/css"/>
