코드 하이라이트 디자인수정

--- a/assets/css/monokai.css
+++ b/assets/css/monokai.css
@@ -209,3 +209,9 @@
   background-color: #282a36;
   border-radius: 5px;
 }
+.highlight .kd + .nx{
+  color :#50fa7b; 
+}
+.highlight .p + .nx{
+  color :#50fa7b; 
+}
