--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,8 +57,7 @@
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon" type="image/png"/>
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon-precomposed" type="image/png"/>
 <link href="{{ site.asset_url }}/lib/normalize.css" rel="stylesheet" type="text/css"/>
-<link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/>   
-<!-- <link href="{{ site.asset_url }}/lib/magnific-popup.min.css" rel="stylesheet" type="text/css"/> --> 
-<link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/> 
-<!-- <link href="{{ site.asset_url }}/fonts/d2coding.css" rel="stylesheet" type="text/css"/>   -->
-<link href="{{ site.asset_url }}/css/screen.css" rel="stylesheet" type="text/css"/>
+<!-- <link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/>    
+<link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/>  -->
+<!-- <link href="{{ site.asset_url }}/css/screen.css" rel="stylesheet" type="text/css"/> -->
+<link href="{{ site.asset_url }}/css/screen_min.css" rel="stylesheet" type="text/css"/>
