--- a/assets/fonts/Kakao.css
+++ b/assets/fonts/Kakao.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Kakao';
+    font-display: auto;
     font-style: normal;
     font-weight: 400;
     src: local('Kakao Regular'), local('KakaoOTF Regular'),
@@ -11,6 +12,7 @@
 
 @font-face {
     font-family: 'Kakao';
+    font-display: auto;
     font-style: normal;
     font-weight: 200;
     src: local('Kakao Light'), local('KakaoOTF Light'),
