디자인 수정 및 포스팅 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,9 +22,9 @@ layout: default
 </div>
 
 <div id="content" class="container post" role="main">
-    <!-- <div id="asdf">
-        <h2>코드 복사/붙여넣기 하는 당신이 아름답습니다.</h2>
-    </div> -->
+    <div id="asdf">
+        <h2>쉽게 쓰여진 글입니다.</h2>
+    </div>
     <div id="post-content">{{ content }}</div>
     <div id="post-footer">
         {% assign author = site.authors | where: 'name', page.author | first %}
