--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -845,16 +845,12 @@ body.tag-template #navbar {
     padding-top: 40px; /* 70px(height) = 40(padding-top) + 20(share icon height) + 10(padding-bottom) */
     padding-bottom: 10px;
 }
-
-#asdf {
-    position: relative;
-    margin: 0 40px;
-    padding: 30px 40px 30px 40px; /* 40(margin) + 40(padding) = 80 */
+.post-header{
+    text-align: center;
     border-bottom: 1px solid #e6e6e6;
-    font-size: 16px;
-    line-height: 28px; /* 28px = 16(font-size) + 12(line-spacing) */
-    text-align: justify;
-}
+    padding: 70px 0;
+    margin: 40px;
+} 
 
 #asdf h2 {
     font-size: 23px;
