취업 술사자 이백아

--- a/assets/css/monokai.css
+++ b/assets/css/monokai.css
@@ -22,8 +22,9 @@
   font-style: italic;
 }
 .highlight .err {
-  color: #960050;
-  background-color: #1e0010;
+  font-weight: bold;
+  /* color: #960050;
+  background-color: #1e0010; */
 }
 .highlight .gi {
   color: #ffffff;
